--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 
+:root {
+  --accent-color-1: #f9fafb;
+  --accent-color-2: #3498db;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -28,8 +33,9 @@ body::after {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.3);
+  margin: 0;
 }
 
 body * {
@@ -40,16 +46,6 @@ h1 {
   font-size: 60px;
   margin: -80px 0 40px;
 }
-
-/* .year {
-  font-size: 200px;
-  z-index: -1;
-  opacity: 0.2;
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-} */
 
 .credits {
   position: absolute;
@@ -98,7 +94,7 @@ a:hover {
   background-color: #fff;
   color: black;
   text-align: center;
-  padding: 5px 0;
+  padding: 5px 2px;
   border-radius: 6px;
 
   /* Position the tooltip */
@@ -119,9 +115,52 @@ a:hover {
   font-size: 10px;
 }
 
+.noun {
+  font-style: bold;
+}
+
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  text-align: center;
+  position: absolute;
+  bottom: 200px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.newsletter input,
+button {
+  margin: 5px;
+  outline: 0;
+  border-radius: 5px;
+  height: 30px;
+  border: 0px solid;
+}
+
+.newsletter input:hover {
+  border: 2px solid var(--accent-color-2);
+}
+
+.newsletter button {
+  color: black;
+  background-color: var(--accent-color-1);
+  border: 0px solid;
+  font-weight: bold;
+  font-family: inherit;
+}
+
+.newsletter button:hover {
+  background-color: var(--accent-color-2);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  color: var(--accent-color-1);
+}
+
 @media (max-width: 500px) {
   h1 {
-    font-size: 45px;
+    font-size: 32px;
   }
 
   .time {
@@ -129,11 +168,15 @@ a:hover {
   }
 
   .time h2 {
-    font-size: 12px;
+    font-size: 10px;
     margin: 0;
   }
 
   .time small {
     font-size: 10px;
+  }
+
+  .newsletter label {
+    font-size: 14px;
   }
 }
