--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ h1 {
   position: absolute;
   bottom: 20px;
   left: 50%;
+  display: none;
   transform: translateX(-50%);
 }
 
@@ -120,7 +121,7 @@ a:hover {
 }
 
 .newsletter {
-  display: flex;
+  display: none;
   flex-direction: column;
   /* align-items: center; */
   /* justify-content: center; */
@@ -133,11 +134,13 @@ a:hover {
 
 .newsletter input,
 button {
-  margin: 5px;
+  margin: 10px 5px 5px 5px;
   outline: 0;
   border-radius: 5px;
   height: 30px;
   border: 0px solid;
+  padding-left: 5px;
+  font-family: inherit;
 }
 
 .newsletter input:hover {
@@ -149,7 +152,6 @@ button {
   background-color: var(--accent-color-1);
   border: 0px solid;
   font-weight: bold;
-  font-family: inherit;
 }
 
 .newsletter button:hover {
@@ -178,5 +180,9 @@ button {
 
   .newsletter label {
     font-size: 14px;
+  }
+
+  .newsletter {
+    bottom: 150px;
   }
 }
