--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
 
 :root {
   --accent-color-1: #f9fafb;
@@ -47,6 +47,11 @@ h1 {
   margin: -80px 0 40px;
 }
 
+.location {
+  margin-bottom: 50px;
+  font-weight: normal;
+}
+
 .credits {
   position: absolute;
   bottom: 20px;
@@ -60,8 +65,14 @@ a {
   color: inherit;
 }
 
-a:hover {
+.location-link:hover {
+  letter-spacing: 0.7px;
   font-weight: bold;
+}
+
+.credits a:hover {
+  font-weight: bold;
+  letter-spacing: 0.7px;
 }
 
 .countdown {
