--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@
 
 body {
   font-family: "Open Sans", "sans-serif";
-  background-image: url("./img/candles.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url("./img/ck.png");
+  background-repeat: repeat;
+  background-size: contain;
   background-position: center center;
   height: 100vh;
   color: #fff;
@@ -34,7 +34,7 @@ body::after {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.5);
   margin: 0;
 }
 
