--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body * {
 
 h1 {
   font-size: 60px;
-  margin: -80px 0 40px;
+  margin: -80px 0 35px;
 }
 
 .location {
@@ -198,5 +198,11 @@ button {
   }
   .credits {
     bottom: 10px;
+  }
+}
+
+@media (max-width: 350px) {
+  .newsletter {
+    bottom: 75px;
   }
 }
