--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 
 :root {
   --accent-color-1: #f9fafb;
@@ -9,31 +9,34 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 16px;
+}
+
 body {
-  font-family: "Open Sans", "sans-serif";
-  background-image: url("./img/ck.png");
-  background-repeat: repeat;
-  background-size: contain;
-  background-position: center center;
-  height: 100vh;
+  font-family: 'Open Sans', 'sans-serif';
   color: #fff;
   margin: 0;
+  padding: 0;
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
   letter-spacing: 1px;
+  background-image: url('./img/ck.png');
+  background-repeat: repeat;
+  background-size: contain;
+  background-position: center;
+  background-blend-mode: overlay;
+  height: 100vh;
+  width: 100%;
+  z-index: -1;
 }
 
 body::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   margin: 0;
 }
@@ -42,55 +45,58 @@ body * {
   z-index: 1;
 }
 
+.content {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 h1 {
-  font-size: 60px;
-  margin: -80px 0 35px;
+  font-size: 3.75em;
 }
 
 .location {
-  margin-bottom: 50px;
+  margin-bottom: 1em;
   font-weight: normal;
+  font-size: 2.5em;
 }
 
-.credits {
-  position: absolute;
-  bottom: 12px;
-  left: 50%;
-  display: none;
-  transform: translateX(-50%);
-}
-
-a {
+.location-link {
   text-decoration: none;
-  color: inherit;
+  color: #fff;
 }
 
-.location-link:hover {
+.location-link:hover,
+.location-link:focus {
   letter-spacing: 0.7px;
   font-weight: bold;
-}
-
-.credits a:hover {
-  font-weight: bold;
-  letter-spacing: 0.7px;
 }
 
 .countdown {
-  /* display: flex; */
   display: none;
-  transform: scale(2);
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 2.5em;
+  margin-bottom: 3em;
 }
 
 .time {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   justify-content: center;
-  margin: 15px;
+  padding: 0.5em 0.2em;
 }
 
 .time h2 {
-  margin: 0 0 5px;
+  margin: 0;
 }
 
 .tooltip {
@@ -109,10 +115,9 @@ a {
   padding: 5px 2px;
   border-radius: 6px;
 
-  /* Position the tooltip */
   position: absolute;
   z-index: 1;
-  bottom: 100%;
+  bottom: 130%;
   left: 50%;
   margin-left: -60px;
 }
@@ -124,7 +129,7 @@ a {
 
 .phonetics {
   font-style: italic;
-  font-size: 10px;
+  font-size: 1em;
 }
 
 .noun {
@@ -132,77 +137,84 @@ a {
 }
 
 .newsletter {
-  display: none;
+  display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  /* justify-content: center; */
   text-align: center;
-  position: absolute;
-  bottom: 150px;
-  left: 50%;
-  transform: translateX(-50%);
+  justify-content: center;
+  margin-bottom: 2.5em;
+  align-items: center;
+}
+
+.newsletter label {
+  font-size: 1.2em;
 }
 
 .newsletter input,
 button {
-  margin: 10px 5px 5px 5px;
+  margin: 0.7em 0;
   outline: 0;
-  border-radius: 5px;
-  height: 30px;
+  border-radius: 6px;
+  height: 2.5em;
   border: 0px solid;
-  padding-left: 5px;
+  padding-left: 0.75em;
   font-family: inherit;
+  width: 100%;
+  font-size: 1.2em;
 }
-
-/* .newsletter input:hover {
-  border: 2px solid var(--accent-color-2);
-} */
 
 .newsletter button {
   color: #2e2d2d;
   background-color: var(--accent-color-1);
-  border: 0px solid;
   font-weight: bold;
+  transition: background-color 0.1s ease;
 }
 
-.newsletter button:hover {
+.newsletter button:hover,
+.newsletter button:focus {
   background-color: var(--accent-color-2);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  border: 1px solid var(--accent-color-1);
   color: var(--accent-color-1);
 }
 
-@media (max-width: 750px) {
-  h1 {
-    font-size: 32px;
-  }
+.credits {
+  font-size: 1.2em;
+}
 
-  .time {
-    margin: 5px;
-  }
+.credits a {
+  text-decoration: none;
+  color: inherit;
+}
 
-  .time h2 {
-    font-size: 10px;
-    margin: 0;
-  }
+.credits a:hover,
+.credits a:focus {
+  font-weight: bold;
+  letter-spacing: 0.7px;
+}
 
-  .time small {
-    font-size: 10px;
-  }
-
-  .newsletter label {
+/* @media only screen and (max-width: 1000px) {
+  html {
     font-size: 14px;
   }
+} */
 
-  .newsletter {
-    bottom: 100px;
+@media only screen and (max-width: 850px) {
+  html {
+    font-size: 12px;
   }
-  .credits {
-    bottom: 10px;
+}
+@media only screen and (max-width: 750px) {
+  html {
+    font-size: 11px;
   }
 }
 
-@media (max-width: 350px) {
-  .newsletter {
-    bottom: 75px;
+@media only screen and (max-width: 400px) {
+  html {
+    font-size: 10px;
+  }
+  .countdown {
+    font-size: 2em;
+    margin-bottom: 1.8em;
   }
 }
